--- a/Sentimental_Analysis.ipynb
+++ b/Sentimental_Analysis.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "# **Overview**\n",
         "\n",
-        "This project is based on [Kaggle 50K IMBD Movie Review Dataset](https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews).\n",
+        "This project is based on [Kaggle 50K IMBD Movie Review Dataset](https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews).(Just 50% of it)\n",
         "\n",
         "This notebook will guide you through the process of Pre-Precessing, Model designing and Prediction."
       ],
